--- a/FGM/Views/Shared/_Layout.cshtml
+++ b/FGM/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
     <!-- Page Title Icon-->
     <link rel="shortcut icon" type="image/x-icon" href="@Url.Content("~/dist/img/Dollar.png")" />
 
-    <title>CIM [@ViewBag.Title]</title>
+    <title>FGM [@ViewBag.Title]</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Font Awesome -->
